WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246679
ThemeAdwaita: checkbox, radio and inner spin button don't scale along by page zoom
https://bugs.webkit.org/show_bug.cgi?id=246679
Summary
ThemeAdwaita: checkbox, radio and inner spin button don't scale along by page...
Fujii Hironori
Reported
2022-10-18 00:16:09 PDT
ThemeAdwaita: checkbox, radio and inner spin button don't scale along by page zoom Test cases:
attachment#391234
[details]
attachment#7622
[details]
Attachments
Patch
(3.75 KB, patch)
2022-10-18 00:20 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(7.63 KB, patch)
2022-10-18 17:22 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(7.62 KB, patch)
2022-10-18 17:40 PDT
,
Fujii Hironori
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
test case
(940 bytes, text/html)
2022-10-18 23:25 PDT
,
Fujii Hironori
no flags
Details
Patch
(10.60 KB, patch)
2022-10-19 01:19 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(10.88 KB, patch)
2022-10-19 03:55 PDT
,
Fujii Hironori
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
test case
(1.23 KB, text/html)
2022-10-19 13:42 PDT
,
Fujii Hironori
no flags
Details
[Screenshot] GTK 254668@main
(75.78 KB, image/png)
2022-10-19 13:47 PDT
,
Fujii Hironori
no flags
Details
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2022-10-18 00:20:48 PDT
Created
attachment 463053
[details]
Patch
Fujii Hironori
Comment 2
2022-10-18 00:26:57 PDT
Chrome and Firefox scale checkbox, radio and inner spin buttons by page zoom. Safari scales checkbox and radio buttons by page zoom, but inner spin buttons. It doesn't look nice.
Fujii Hironori
Comment 3
2022-10-18 13:38:22 PDT
No browser scales scrollbars by page zoom.
Fujii Hironori
Comment 4
2022-10-18 13:45:20 PDT
Comment on
attachment 463053
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=463053&action=review
> COMMIT_MESSAGE:9 > +as the buttonRect.
the triangles looks wide. Needs a fix.
Fujii Hironori
Comment 5
2022-10-18 17:22:59 PDT
Created
attachment 463069
[details]
Patch
Fujii Hironori
Comment 6
2022-10-18 17:40:22 PDT
Created
attachment 463070
[details]
Patch
Fujii Hironori
Comment 7
2022-10-18 23:25:42 PDT
Created
attachment 463076
[details]
test case
Fujii Hironori
Comment 8
2022-10-19 01:19:08 PDT
Created
attachment 463079
[details]
Patch
Fujii Hironori
Comment 9
2022-10-19 03:55:20 PDT
Created
attachment 463080
[details]
Patch
Darin Adler
Comment 10
2022-10-19 09:56:24 PDT
Comment on
attachment 463079
[details]
Patch Any chance of moving to GitHub for pull requests soon?
Fujii Hironori
Comment 11
2022-10-19 13:16:03 PDT
Because we can't use GitHub pull request for security patches, we have to use both. And, it still has critically important missing features. Stress Test EWS and "retry failed builds" button (
bug#246323
) aren't available for GitHub PR yet. And, I like Bugzilla review system because it's integrated into WebKit bug tracker. (GitHub PR is integrated into GitHub issue tracker, but we don't use it.)
Fujii Hironori
Comment 12
2022-10-19 13:42:44 PDT
Created
attachment 463097
[details]
test case
Fujii Hironori
Comment 13
2022-10-19 13:47:28 PDT
Created
attachment 463098
[details]
[Screenshot] GTK
254668@main
Fujii Hironori
Comment 14
2022-10-19 14:43:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5561
EWS
Comment 15
2022-10-21 02:37:25 PDT
Committed
255820@main
(fbcbce2f5153): <
https://commits.webkit.org/255820@main
> Reviewed commits have been landed. Closing PR #5561 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug