Cherry-pick 255820@main (fbcbce2f5153). https://bugs.webkit.org/show_bug.cgi?id=246679

ThemeAdwaita: checkbox, radio and inner spin button don't scale along by page zoom
    https://bugs.webkit.org/show_bug.cgi?id=246679

    Reviewed by Carlos Garcia Campos.

    ThemeAdwaita should scale controls based on a given zoom factor. Scale
    buttons for input elements with type=number, type=checkbox, type=radio
    and datalist, and select elements.

    ThemeAdwaita::paintArrow painted a 16x16 arrow at (0, 0) position.
    Change it to take a rect and paint an arrow at the center of the rect,
    fitting to the smaller edge.

    * Source/WebCore/platform/adwaita/ThemeAdwaita.cpp:
    (WebCore::ThemeAdwaita::paintArrow):
    (WebCore::ThemeAdwaita::controlSize const):
    (WebCore::ThemeAdwaita::paintSpinButton):
    * Source/WebCore/platform/adwaita/ThemeAdwaita.h:
    * Source/WebCore/rendering/RenderThemeAdwaita.cpp:
    (WebCore::RenderThemeAdwaita::paintTextField):
    (WebCore::RenderThemeAdwaita::popupInternalPaddingBox const):
    (WebCore::RenderThemeAdwaita::paintMenuList):
    * LayoutTests/platform/gtk/transforms/2d/zoom-menulist-expected.png:
    * LayoutTests/platform/gtk/transforms/2d/zoom-menulist-expected.txt:

    Canonical link: https://commits.webkit.org/255820@main